syntax = "proto3";
option go_package = "./;pb";

import "google/api/annotations.proto";

// 判题服务接口
service JudgeService {
  // 查询判题结果
  rpc QueryJudgeResult(QueryJudgeResultRequest) returns (QueryJudgeResultResponse) {
    option (google.api.http) = {
      get: "/v1/judge/result"
      response_body: "*"
    };
  }
}

message QueryJudgeResultRequest {
  int64 task_id = 1;
}
message QueryJudgeResultResponse {
  string status = 1;
  string message = 2;
}